Lexing/test_cases/bad/string-backslash-1.cl
"hello"
"hello my name is george"
"hello my name is \g\e\o\r\g\e"
"\h\e\l\l\o\ \m\y\
\n\a\m\e \i\s\ \b\t\n\f\"\"\"\"\"""hello""hello""\hello\""
"\a\b\c\d\e\f\g\h\i\j\k\l\m\n\o\p\q\r\s\t\u\v\w\x\y\z\1\2\3\4\5\6\7\8\9\0\-\=\_\+\!\@\#\$\%\^\&\*\(\)\_\+\""
"\\hello"
"\\h\\e\\l\\o\\""hello\\"
